# virtual-biotech-scientist

./: .env.example  .gitignore  .mcp.json  LICENSE  MIGRATION_CHECKLIST.md  README.md  pyproject.toml
arena/: README.md  build_hypotheses.py  pareto_test_run.json  pareto_test_run_graph.html
arena/fixtures/: melanoma.hypotheses.json
arena/pareto_agent/: axis_agents.py  comparison_based_multi_agent_pareto_system.md  graph.py  llm_client.py  models.py  pareto.py  pareto_agent_design.md  prompts.py  red_flags.py  run.py  tiebreak.py  visualize.py
arena/tests/: test_load_hypotheses.py
common/: llm_backend.py
common/tests/: test_llm_backend.py
data/: README.md
demo_data/b7h3/: briefing.json  review.json  step_01_gwas.json  step_02_celltype_expression.json  step_03_celltype_specificity.json  step_04_offtarget_safety.json  step_05_clinical_trials.json  step_06_reroute.json  synthesis.json
docs/: ARENA.md  DESIGN.md  DIFFERENTIATION.md  DIRECTIONS.md  DRUG_DISCOVERY_PRIMER.md  INFORMATION_MAXIMISATION.md  README.md  REFERENCES.md  SELF_IMPROVING.md  SETUP.md
docs/background/: DIFFERENTIATION.md  DIRECTIONS.md  DRUG_DISCOVERY_PRIMER.md  PRIOR_ART.md  REFERENCES.md
docs/background/papers/: README.md
docs/design/: ARENA.md  DESIGN.md  INFORMATION_MAXIMISATION.md  SELF_IMPROVING.md
docs/method/: COMPARISON_PARETO_SYSTEM.md  RANK_FIRST_VS_DOMINANCE_FIRST.md
docs/setup/: SETUP.md
docs/writing/: README.md
docs/writing/posts/: 2026-07-virtual-biotech-scientist.md
eval/: CLAUDE_PRIORS_PROMPT.md  CLAUDE_SCIENCE_BASELINE.md  OPENTARGETS_HARNESS.md  RANKING_FORMAT.md  README.md  augc.py  build_dataset.py  plot_gain_curves.py
eval/data/: melanoma.candidates.json  melanoma.example_ranking.json  melanoma.labels.json  melanoma_anyclin.candidates.json  melanoma_anyclin.claude_priors_ranking.json  melanoma_anyclin.labels.json  melanoma_anyclin.pareto_numeric_ranking.json
experiments/braf_melanoma_llamacpp_20260720-162446/: report.md  result.json  trace.jsonl
experiments/braf_melanoma_llamacpp_20260720-162446/reproducibility/: checksums.sha256  commands.sh  environment.yml
frontend/: README.md  _collect.js  _data.js  _graph.js  _loop.js  _pairs.js  index.html
frontend/tools/: extract_collect.py  extract_graph.py
llm/: __init__.py  backend.py
scripts/: llm_smoke.py  rank_melanoma.py  serve_local.py  setup.sh
scripts/slurm/: run_braf_llamacpp.sh
skills/celltype-specificity-profiler/: README.md  SKILL.md  profiler.py
skills/virtual-biotech-cso/: README.md  SKILL.md  cso.py  harness.py  harness_langgraph.py  resolver.py  routing.yaml  runners.py  tool_backend.py  tool_router.yaml  tracing.py
tests/: __init__.py  test_arena.py
tools/: README.md  evidence.py  opentargets.py  pareto_eval.py  requirements.txt  schema.py
tools/demo/: demo_hypotheses.json  run_tooluniverse_demos.py
ui/: leaderboard.py
vbs/: __init__.py
vbs/arena/: __init__.py  card.py  fixture_loader.py  hypothesis.py  mutate.py  pareto.py  scheduler.py  tournament.py
vbs/cso/: __init__.py  cso.py  harness.py  reviewer.py
vbs/divisions/: __init__.py  base.py
vbs/experiments/: __init__.py  interface.py
vbs/toolkit/: __init__.py  compose.py
vbs/tooluniverse/: __init__.py  adapter.py  client.py
vbs/voi/: __init__.py  selector.py
(+52 files in other folders)
