[project]
name = "virtual-biotech-scientist"
version = "0.1.0"
description = "Virtual Biotech Scientist — an agentic system over ToolUniverse for therapeutic target discovery."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scanpy>=1.10",
    "anndata>=0.10",
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "llama-cpp-python[server]>=0.3.32",
    "huggingface-hub>=1.22.0",
]

[project.optional-dependencies]
# ToolUniverse (mims-harvard) — the evidence / tool layer: 1000+ scientific tools,
# datasets, and models (incl. a Boltz-2 backend) exposed to the agents over MCP.
# Install with `.[tools]`; the MCP server is wired in .mcp.json (uvx tooluniverse) and
# via the Claude Code plugin. See docs/SETUP.md.
tools = [
    "tooluniverse>=1.0",
]
# Live multi-agent loop: LLM backends for the CSO/reviewer/judge roles (vbs/runners.py).
# Optional so the arena, VoI selector, and offline --demo stay dependency-free.
agents = [
    "anthropic>=0.40",
    "openai>=1.40",
]
# Optional hosted span UI for the harness trace (vbs/tracing.py). The in-tree
# trace.jsonl needs nothing; this only enables the Langfuse mirror (SDK v4).
tracing = [
    "langfuse>=4.0",
]
# Local stdio MCP client to the ToolUniverse server (vbs/tooluniverse/client.py).
mcp = [
    "mcp>=1.2",
]
# Streamlit leaderboard (ui/leaderboard.py): Elo animation + Pareto view + provenance.
ui = [
    "streamlit>=1.36",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The framework spine now lives in the `vbs` package; the migrated single-cell
# skill stays under `skills/`. ToolUniverse remains the external tool layer.
[tool.hatch.build.targets.wheel]
packages = ["vbs"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills"]
